<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/popup_long" />



    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="95dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center">

            <com.fournodes.ud.pranky.CustomTextView
                android:id="@+id/lblfrndID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text= "P r a n k y "
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="@dimen/settings_font_small"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/version"
                android:textAllCaps="true"
                android:textColor="#bf071a"
                android:textIsSelectable="false"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/copyright"
                    android:autoLink="web"
                    android:textColor="#000"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColorLink="#000"/>

                <com.fournodes.ud.pranky.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="S o u n d s "
                    android:autoLink="web"
                    android:textAllCaps="true"
                    android:textColor="#bf071a"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/sounds"
                    android:autoLink="web"
                    android:textColor="#000"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColorLink="#000"/>
                <com.fournodes.ud.pranky.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="B a c k g r o u n d  M u s i c "
                    android:autoLink="web"
                    android:textAllCaps="true"
                    android:textColor="#bf071a"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/music"
                    android:autoLink="web"
                    android:textColor="#000"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColorLink="#000"/>
                <com.fournodes.ud.pranky.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="I c o n  S e t "
                    android:autoLink="web"
                    android:textAllCaps="true"
                    android:textColor="#bf071a"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:text="@string/icons"
                    android:autoLink="web"
                    android:textColor="#000"
                    android:textIsSelectable="false"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:textColorLink="#000"/>
                <com.fournodes.ud.pranky.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="K e e p  P r a n k i n g ! "
                    android:autoLink="web"
                    android:textColor="#bf071a"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"/>
                <com.fournodes.ud.pranky.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="T h a n k  Y o u"
                    android:autoLink="web"
                    android:textColor="#bf071a"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>




    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/close_btn_margin_right_long"
        android:layout_marginTop="@dimen/close_btn_margin_top_long"
        android:src="@drawable/closestates" />


</RelativeLayout>